--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: jekyll/minima
 title: DRIN 2024
-description: DevSecOps in Ressource-constrained IoT Networks
+description: DevSecOps in Resource-constrained IoT Networks
 header_pages:
   - #Scope
 author:
